[ENG-3736] Fix bugs: project link overflow text (#1477)
* added formatting for text overflow. ideal implementation would be to have the main column properly reposition, this is more a hotfix and recommend more testing for ideal result.

* Matching styles for 70vw

Matching styles

--- a/app/guid-file/styles.scss
+++ b/app/guid-file/styles.scss
@@ -19,6 +19,13 @@
     padding: 0 20px 20px;
 }
 
+.FlexContainerRow > h2 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 70vw;
+}
+
 .ProjectLink {
     margin: 20px;
 }
